Closed
Bug 1640481
Opened 5 years ago
Closed 5 years ago
Perma Windows Bustages for nsAppRunner.cpp(3990,21): warning: Usage of ASCII file functions (here fopen) is forbidden on Windows. when Gecko 78 merges to Beta on 2020-06-01
Categories
(Core :: Widget: Win32, defect)
Core
Widget: Win32
Tracking
()
VERIFIED
FIXED
mozilla78
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | blocking | verified |
People
(Reporter: bogdan_tara, Assigned: emmamalysz)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[Tracking Requested - why for this release]:
Central as Beta simulation.
https://treeherder.mozilla.org/#/jobs?repo=try&selectedTaskRun=ASFM1TQpQA-xv_VksGw1Iw-0&revision=70c65ec4eddb8966f3d3fabbc6acb8e530baac30&searchStr=windows
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=303527241&repo=try&lineNumber=33808
[task 2020-05-24T11:10:56.497Z] 11:10:56 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/toolkit/xre'
[task 2020-05-24T11:10:56.501Z] 11:10:56 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang-cl -Xclang -std=c++17 -m32 -FonsAppRunner.obj -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -Xclang -ftrivial-auto-var-init=pattern -guard:cf -DDEBUG=1 -DTELEMETRY_PING_FORMAT_VERSION=4 -DPROXY_PRINTING=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DCOMPILER_MSVC '-DMOZ_APP_NAME="firefox"' '-DMOZ_APP_BASENAME="Firefox"' '-DMOZ_APP_DISPLAYNAME="Firefox Nightly"' '-DMOZ_APP_VENDOR="Mozilla"' '-DMOZ_APP_VERSION="78.0"' '-DOS_TARGET="WINNT"' '-DMOZ_WIDGET_TOOLKIT="windows"' -DMOZ_DEFAULT_BROWSER_AGENT=1 -DMOZ_UPDATER '-DTARGET_OS_ABI="WINNT_x86-msvc"' -DGRE_MILESTONE=78.0 -DMOZ_APP_VERSION_DISPLAY=78.0b1 -DAPP_VERSION=78.0 '-DAPP_ID={ec8030f7-c20a-464f-9b0e-13a3a9e97384}' -DMOZ_BUILD_APP_IS_BROWSER -DTOPOBJDIR=/builds/worker/workspace/obj-build -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/toolkit/xre -I/builds/worker/workspace/obj-build/toolkit/xre -I/builds/worker/checkouts/gecko/toolkit/components/printingui -I/builds/worker/checkouts/gecko/toolkit/components/remote -I/builds/worker/checkouts/gecko/toolkit/components/printingui -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/checkouts/gecko/other-licenses/nsis/Contrib/CityHash/cityhash -I/builds/worker/checkouts/gecko/toolkit/components/find -I/builds/worker/checkouts/gecko/toolkit/components/printingui/ipc -I/builds/worker/checkouts/gecko/toolkit/components/windowwatcher -I/builds/worker/checkouts/gecko/toolkit/mozapps/update/common -I/builds/worker/checkouts/gecko/toolkit/profile -I/builds/worker/checkouts/gecko/config -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/commandhandler -I/builds/worker/checkouts/gecko/dom/ipc -I/builds/worker/checkouts/gecko/dom/webbrowserpersist -I/builds/worker/checkouts/gecko/testing/gtest/mozilla -I/builds/worker/checkouts/gecko/toolkit/crashreporter -I/builds/worker/checkouts/gecko/xpcom/build -I/builds/worker/checkouts/gecko/security/sandbox/chromium -I/builds/worker/checkouts/gecko/security/sandbox/chromium-shim -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -MD -FI /builds/worker/workspace/obj-build/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -Qunused-arguments -fcrash-diagnostics-dir=/builds/worker/artifacts -TP -Zc:sizedDealloc- -D_HAS_EXCEPTIONS=0 -W3 -Gy -Zc:inline -arch:SSE2 -Gw -Wno-inline-new-delete -Wno-invalid-offsetof -Wno-microsoft-enum-value -Wno-microsoft-include -Wno-unknown-pragmas -Wno-ignored-pragmas -Wno-deprecated-declarations -Wno-invalid-noreturn -Wno-inconsistent-missing-override -Wno-implicit-exception-spec-mismatch -Wno-microsoft-exception-spec -Wno-unused-local-typedef -Wno-ignored-attributes -Wno-used-but-marked-unused -D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING -GR- -Z7 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -Oy- -Werror -Xclang -fexperimental-new-pass-manager -Xclang -MP -Xclang -dependency-file -Xclang .deps/nsAppRunner.obj.pp -Xclang -MT -Xclang nsAppRunner.obj /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp
[task 2020-05-24T11:10:56.501Z] 11:10:56 INFO - /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp(3588,13): error: unused function 'ReadAheadPackagedDll' [-Werror,-Wunused-function]
[task 2020-05-24T11:10:56.502Z] 11:10:56 INFO - static void ReadAheadPackagedDll(const wchar_t* dllName,
[task 2020-05-24T11:10:56.502Z] 11:10:56 INFO - ^
[task 2020-05-24T11:10:56.502Z] 11:10:56 INFO - /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp(3990,21): warning: Usage of ASCII file functions (here fopen) is forbidden on Windows.
[task 2020-05-24T11:10:56.502Z] 11:10:56 INFO - FILE* logFP = fopen(logFile, "wb");
[task 2020-05-24T11:10:56.502Z] 11:10:56 INFO - ^
[task 2020-05-24T11:10:56.502Z] 11:10:56 INFO - /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp(3990,21): note: On Windows executed functions: fopen, fopen_s, open, _open, _sopen, _sopen_s, OpenFile, CreateFileA should never be used due to lossy conversion from UTF8 to ANSI.
[task 2020-05-24T11:10:56.502Z] 11:10:56 INFO - 1 warning and 1 error generated.
[task 2020-05-24T11:10:56.502Z] 11:10:56 INFO - /builds/worker/checkouts/gecko/config/rules.mk:746: recipe for target 'nsAppRunner.obj' failed
[task 2020-05-24T11:10:56.502Z] 11:10:56 ERROR - make[4]: *** [nsAppRunner.obj] Error 1
[task 2020-05-24T11:10:56.502Z] 11:10:56 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/toolkit/xre'
[task 2020-05-24T11:10:56.502Z] 11:10:56 INFO - make[4]: *** Waiting for unfinished jobs....
| Reporter | ||
Updated•5 years ago
|
Flags: needinfo?(emalysz)
| Reporter | ||
Updated•5 years ago
|
Summary: Perma Early Beta Windows Bustages complaining about ReadAheadPackagedDll when Gecko 78 merges to Beta on 2020-06-01 → Perma Windows Bustages for nsAppRunner.cpp(3990,21): warning: Usage of ASCII file functions (here fopen) is forbidden on Windows. when Gecko 78 merges to Beta on 2020-06-01
| Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → emalysz
Flags: needinfo?(emalysz)
| Assignee | ||
Comment 2•5 years ago
|
||
Pushed by cbrindusan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8c48e8fac737
fix unused function error for ReadAheadPackagedDll r=dthayer
Comment 4•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Comment 5•5 years ago
|
||
Verified in yesterday's central-as-beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=ffa1600c7f9ca624b643f91b373f8f6c4a92c642
Status: RESOLVED → VERIFIED
Updated•5 years ago
|
Has Regression Range: --- → yes
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•