Bug 1640481, fix unused function error for ReadAheadPackagedDll r=dthayer

Differential Revision: https://phabricator.services.mozilla.com/D76845